Fix generated image thumbnail alignment

--- a/src/components/editors/ImageField.css
+++ b/src/components/editors/ImageField.css
@@ -274,7 +274,7 @@
   flex-shrink: 0;
 }
 
-.image-sd-thumb-wrap > .tooltip-wrap {
+.image-sd-thumb-remove-wrap {
   position: absolute;
   top: -5px;
   right: -5px;
